--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Boot uses Hibernate as the default JPA implementation.
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # used for database initialization- to create database tables automatically
 spring.jpa.hibernate.ddl-auto=update
